--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,7 @@ figcaption {
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#efefef', endColorstr='#dddddd',GradientType=0 ); /* IE6-9 */
 }
 
+/* MEDIUM-FADE */
 .medium-fade {
   
 }
