--- a/css/style.css
+++ b/css/style.css
@@ -149,7 +149,11 @@ header {
 
 
 /*////////// NAVBAR //////////*/
-
+#navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+}
 
 
 /*////////// LOGO //////////*/
