--- a/css/style.css
+++ b/css/style.css
@@ -153,6 +153,10 @@ header {
   position: fixed;
   top: 0;
   left: 0;
+  width: 100%;
+  z-index: 2;
+  border-bottom: 1px solid #ccc;
+  text-align: center;
 }
 
 
