--- a/css/style.css
+++ b/css/style.css
@@ -158,7 +158,12 @@ header {
   border-bottom: 1px solid #ccc;
   text-align: center;
 }
-
+#navbar nav {
+  border-left: 1px solid #ccc;
+}
+#navbar nav a {
+  display: inline-block;
+}
 
 /*////////// LOGO //////////*/
 
