--- a/css/style.css
+++ b/css/style.css
@@ -174,7 +174,7 @@ header {
   font: 1em "Trebuchet MS", Arial, sans-serif;
 }
 
-#navbar nav .selected {
+#navbar nav a.selected {
   background: #ccc;
   color: white;
 }
